--- a/.travis.yml
+++ b/.travis.yml
@@ -3,22 +3,14 @@ arch:
  - amd64
  - ppc64le
 python:
-  - 2.6
   - 2.7
-  - 3.2
-  - 3.3
   - 3.4
   - 3.5
   - pypy
- # Disable  unsupport version 2.6,3.3, 3.2 & pypy on ppc64le
+  # amd and ppc64le both fails for python version 2.6, 3.2 and 3.3 ,hence removed directly 
+ # Disable  unsupport version  pypy for ppc64 
 jobs: 
   exclude:
-    - arch: ppc64le
-      python: 3.3
-    - arch: ppc64le
-      python: 3.2
-    - arch: ppc64le
-      python: 2.6
     - arch: ppc64le
       python: pypy
 
